--- a/app/src/main/res/layout/fragment_start_run.xml
+++ b/app/src/main/res/layout/fragment_start_run.xml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <!-- Time View -->
+
+    <!-- Average Pace -->
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/distanceLabelView" />
 
     <TextView
         android:id="@+id/timeView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="00:00"
+        android:layout_marginTop="30dp"
+        android:text="@string/_00_00"
+        android:textColor="@android:color/black"
         android:textSize="48sp"
         android:textStyle="bold"
+        android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,82 +38,96 @@
         android:id="@+id/averagePaceValueView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="0.00 mi/min"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="30dp"
+        android:text="@string/_0_00_mi_min"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:typeface="sans"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/distanceValueView"
-        app:layout_constraintTop_toBottomOf="@id/timeView" />
+        app:layout_constraintTop_toBottomOf="@+id/timeView" />
 
+    <!-- Average Pace Label -->
     <TextView
         android:id="@+id/averagePaceLabelView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="average pace"
+        android:text="@string/average_pace"
+        android:textColor="@android:color/black"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/averagePaceValueView"
+        app:layout_constraintEnd_toEndOf="@id/averagePaceValueView"
         app:layout_constraintStart_toStartOf="@id/averagePaceValueView"
-        app:layout_constraintEnd_toEndOf="@id/averagePaceValueView" />
+        app:layout_constraintTop_toBottomOf="@id/averagePaceValueView" />
 
+    <!-- Distance Value -->
     <TextView
         android:id="@+id/distanceValueView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="0.00 mi"
+        android:layout_marginEnd="50dp"
+        android:text="@string/_0_00_mi"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/averagePaceValueView"
+        android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timeView" />
+        app:layout_constraintTop_toTopOf="@+id/averagePaceValueView" />
 
+    <!-- Distance Label -->
     <TextView
         android:id="@+id/distanceLabelView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="distance"
+        android:text="@string/distance"
+        android:textColor="@android:color/black"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/distanceValueView"
+        app:layout_constraintEnd_toEndOf="@id/distanceValueView"
         app:layout_constraintStart_toStartOf="@id/distanceValueView"
-        app:layout_constraintEnd_toEndOf="@id/distanceValueView" />
+        app:layout_constraintTop_toBottomOf="@id/distanceValueView" />
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="16dp"
-        app:layout_constraintBottom_toTopOf="@id/startPauseButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.218"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/distanceValueView"
-        app:layout_constraintVertical_bias="0.625" />
-
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/startPauseButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Start"
-        app:layout_constraintWidth_percent=".5"
-        app:layout_constraintEnd_toStartOf="@+id/resetButton"
-        app:layout_constraintBottom_toTopOf="@+id/saveRunButton"/>
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/circle_button"
+        android:backgroundTint="#45caff"
+        android:text="@string/start"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="italic|bold"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/resetButton"
-        android:text= "Reset"
-        android:layout_width= "0dp"
-        android:layout_height= "wrap_content"
-        app:layout_constraintWidth_percent=".5"
-        app:layout_constraintStart_toEndOf ="@+id/startPauseButton"
-        app:layout_constraintBottom_toTopOf ="@+id/saveRunButton"/>
-    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_button"
+        android:backgroundTint="@color/white"
+        android:text="@string/reset"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:layout_marginStart="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/startPauseButton"
+        app:layout_constraintStart_toEndOf="@+id/startPauseButton"
+        app:layout_constraintTop_toTopOf="@+id/startPauseButton"
+         />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/saveRunButton"
-        android:layout_width= "wrap_content"
-        android:layout_height= "wrap_content"
-        android:text="Save Run"
-        app:layout_constraintBottom_toBottomOf ="parent"
-        app:layout_constraintStart_toStartOf ="parent"
-        app:layout_constraintEnd_toEndOf ="parent"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/rounded_button"
+        android:backgroundTint="@color/white"
+        android:text="@string/save_run"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/startPauseButton"
+        app:layout_constraintEnd_toStartOf="@+id/startPauseButton"
+        app:layout_constraintTop_toTopOf="@+id/startPauseButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
